chore: fix footer add scrollbar

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,22 +1,23 @@
 .link{
-    position: relative;
+  position: relative;
 }
-  
+
 .link:after{
-  content: '';
-  position: absolute;
-  width: 0; height: 0.9px;
-  border-radius: 9999;
-  display: block;
-  margin-top: -2px;
-  /* margin-bottom: 3px; */
-  right: 0;
-  transition: width .2s ease;
-  -webkit-transition: width .2s ease;
+content: '';
+position: absolute;
+width: 0; height: 0.9px;
+border-radius: 9999;
+display: block;
+margin-top: -2px;
+/* margin-bottom: 3px; */
+right: 0;
+background: #1A1A1A;
+transition: width .2s ease;
+-webkit-transition: width .2s ease;
 }
-   
+ 
 .link:hover:after{
-  width: 100%;
-  left: 0;
-  background: var(--footer);
+width: 100%;
+left: 0;
+background: #1A1A1A;
 }
